--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scamp-c6-project",
   "version": "1.0.0",
-  "description": "SheCodes-Africa - An API infrastructure...",
+  "description": "SheCodes-Africa - An API infrastructure to handle employment recruiting services and talent acquisition services for employers and identified talents",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -18,6 +18,7 @@
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.4",
     "nodemailer": "^6.7.8",
     "randomstring": "^1.2.2",
