--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.5.4",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
     "randomstring": "^1.2.2",
     "swagger-ui-express": "^4.5.0",
