--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+config/
+config/*
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
