--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Cynthia Nwakaeme",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^6.5.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
