--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/storage": "^6.5.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
